@@ -3,10 +3,10 @@
 
 #include "sql.h"
 
-int journal_add_header(char* title, char ***buffer);
-int journal_add_line(struct task atask, char ***buffer, int length);
-int journal_add_footer(char ***buffer, int length);
-int journal_to_file(char **buffer, char *filename);
-int journal_show(char *filename);
+int journal_add_header(char* title);
+int journal_add_line(struct task atask);
+int journal_add_footer();
+int journal_to_file(const char *filename);
+int journal_show(const char *filename);
 
 #endif
